<resources>
    <string name="app_name">CardStacker</string>
    <string name="action_settings">Settings</string>
    <string name="action_shareCard">Teilen</string>
    <string name="action_deleteCard">Löschen</string>
    <string name="action_addCard">Neue Karte</string>
    <string name="action_editCard">Karte Editieren</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_add_card">Neue Karte</string>
    <string name="title_activity_overview">Übersicht</string>
    <string name="title_activity_card_list_item">Karte</string>

    <string name="login_button">Login</string>
    <string name="register_button">Registrieren</string>
    <string name="cancel_button">Abbrechen</string>
    <string name="save_button">Speichern</string>

    <string name="login_label">Loggen Sie sich mit Ihren Daten ein, oder registrieren Sie sich neu</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="card_name">Karte Name</string>
    <string name="card_description">Beschreibung</string>
    <string name="expiration_date">Ablaufdatum</string>
    <string name="newCard_text">Neue Karte:</string>
    <string name="logout">Logout</string>
    <string name="karte">Karte</string>
    <string name="title_karte_list">Karten</string>
    <string name="title_karte_detail">Karte Detail</string>
    <string name="title_activity_card_detail">CardDetailActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="card_saved">Karte gespeichert</string>

    <string name="attribute_value">Attribut Wert</string>
    <string name="attribute_name">Attribut Name</string>


</resources>
